{
  "version": 4,
  "terraform_version": "1.5.0",
  "serial": 301,
  "lineage": "889b5225-0c62-1975-2d57-8ebaad068d9b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "mumbai-IG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:621257592898:internet-gateway/igw-053382e08d3f4bf99",
            "id": "igw-053382e08d3f4bf99",
            "owner_id": "621257592898",
            "tags": {
              "Name": "mumbai-IG"
            },
            "tags_all": {
              "Name": "mumbai-IG"
            },
            "vpc_id": "vpc-09c014ca8cbc77216"
          },
          "dependencies": [
            "aws_vpc.mumbai-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "mumbai-LB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:621257592898:loadbalancer/app/Mumbai-LB/dd77a7d1ca047b18",
            "arn_suffix": "app/Mumbai-LB/dd77a7d1ca047b18",
            "desync_mitigation_mode": "defensive",
            "dns_name": "Mumbai-LB-544100454.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:621257592898:loadbalancer/app/Mumbai-LB/dd77a7d1ca047b18",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Mumbai-LB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0b109a5955ae30405"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0b12eb155937238f9"
              },
              {
                "subnet_id": "subnet-0e98ea737ef801390"
              }
            ],
            "subnets": [
              "subnet-0b12eb155937238f9",
              "subnet-0e98ea737ef801390"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-09c014ca8cbc77216",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.mumbai_SG_allow_ssh_http",
            "aws_subnet.mumbai-subnet-1a-pub",
            "aws_subnet.mumbai-subnet-1b-pub",
            "aws_vpc.mumbai-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "mumbai-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:621257592898:listener/app/Mumbai-LB/dd77a7d1ca047b18/c252d20be5aebabe",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:621257592898:targetgroup/Terraform-project/b9102373cb4c2600",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:621257592898:listener/app/Mumbai-LB/dd77a7d1ca047b18/c252d20be5aebabe",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:621257592898:loadbalancer/app/Mumbai-LB/dd77a7d1ca047b18",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.mumbai-LB",
            "aws_lb_target_group.mumbai-TG",
            "aws_security_group.mumbai_SG_allow_ssh_http",
            "aws_subnet.mumbai-subnet-1a-pub",
            "aws_subnet.mumbai-subnet-1b-pub",
            "aws_vpc.mumbai-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "mumbai-TG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:621257592898:targetgroup/Terraform-project/b9102373cb4c2600",
            "arn_suffix": "targetgroup/Terraform-project/b9102373cb4c2600",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:621257592898:targetgroup/Terraform-project/b9102373cb4c2600",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "Terraform-project",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09c014ca8cbc77216"
          },
          "dependencies": [
            "aws_vpc.mumbai-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "mumbai-RT-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:621257592898:route-table/rtb-0f1a31d712cc4210e",
            "id": "rtb-0f1a31d712cc4210e",
            "owner_id": "621257592898",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "mumbai-RT-2"
            },
            "tags_all": {
              "Name": "mumbai-RT-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c014ca8cbc77216"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.mumbai-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "mumbai-RT-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:621257592898:route-table/rtb-00ecd03b3be676827",
            "id": "rtb-00ecd03b3be676827",
            "owner_id": "621257592898",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-053382e08d3f4bf99",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mumbai-RT-pub"
            },
            "tags_all": {
              "Name": "mumbai-RT-pub"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c014ca8cbc77216"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.mumbai-IG",
            "aws_vpc.mumbai-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mumbai-RT-association-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08834189fecb7c0fb",
            "route_table_id": "rtb-00ecd03b3be676827",
            "subnet_id": "subnet-0b12eb155937238f9"
          },
          "dependencies": [
            "aws_internet_gateway.mumbai-IG",
            "aws_route_table.mumbai-RT-pub",
            "aws_subnet.mumbai-subnet-1a-pub",
            "aws_vpc.mumbai-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mumbai-RT-association-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0361ceeee4dbd3f8b",
            "route_table_id": "rtb-00ecd03b3be676827",
            "subnet_id": "subnet-0e98ea737ef801390"
          },
          "dependencies": [
            "aws_internet_gateway.mumbai-IG",
            "aws_route_table.mumbai-RT-pub",
            "aws_subnet.mumbai-subnet-1b-pub",
            "aws_vpc.mumbai-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mumbai-RT-association-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0854f771786a9a38a",
            "route_table_id": "rtb-0f1a31d712cc4210e",
            "subnet_id": "subnet-0c195b43e8fc29abc"
          },
          "dependencies": [
            "aws_route_table.mumbai-RT-2",
            "aws_subnet.mumbai-subnet-1a",
            "aws_vpc.mumbai-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mumbai-RT-association-4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02267d273abc56b34",
            "route_table_id": "rtb-0f1a31d712cc4210e",
            "subnet_id": "subnet-00936fcd5478dd534"
          },
          "dependencies": [
            "aws_route_table.mumbai-RT-2",
            "aws_subnet.mumbai-subnet-1b",
            "aws_vpc.mumbai-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mumbai_SG_allow_ssh_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:621257592898:security-group/sg-0b109a5955ae30405",
            "description": "Allow SSH and HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b109a5955ae30405",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from PC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh from PC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh_http",
            "name_prefix": "",
            "owner_id": "621257592898",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh_http"
            },
            "tags_all": {
              "Name": "allow_ssh_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c014ca8cbc77216"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.mumbai-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mumbai-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:621257592898:subnet/subnet-0c195b43e8fc29abc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c195b43e8fc29abc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "621257592898",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mumbai-subnet-1a"
            },
            "tags_all": {
              "Name": "mumbai-subnet-1a"
            },
            "vpc_id": "vpc-09c014ca8cbc77216"
          },
          "dependencies": [
            "aws_vpc.mumbai-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mumbai-subnet-1a-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:621257592898:subnet/subnet-0b12eb155937238f9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b12eb155937238f9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "621257592898",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mumbai-subnet-1a"
            },
            "tags_all": {
              "Name": "mumbai-subnet-1a"
            },
            "vpc_id": "vpc-09c014ca8cbc77216"
          },
          "dependencies": [
            "aws_vpc.mumbai-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mumbai-subnet-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:621257592898:subnet/subnet-00936fcd5478dd534",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00936fcd5478dd534",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "621257592898",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mumbai-subnet-1b"
            },
            "tags_all": {
              "Name": "mumbai-subnet-1b"
            },
            "vpc_id": "vpc-09c014ca8cbc77216"
          },
          "dependencies": [
            "aws_vpc.mumbai-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mumbai-subnet-1b-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:621257592898:subnet/subnet-0e98ea737ef801390",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e98ea737ef801390",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "621257592898",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mumbai-subnet-1b"
            },
            "tags_all": {
              "Name": "mumbai-subnet-1b"
            },
            "vpc_id": "vpc-09c014ca8cbc77216"
          },
          "dependencies": [
            "aws_vpc.mumbai-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mumbai-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:621257592898:vpc/vpc-09c014ca8cbc77216",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e131d96b067dc661",
            "default_route_table_id": "rtb-0434633ca0720299c",
            "default_security_group_id": "sg-0f967385363415319",
            "dhcp_options_id": "dopt-0ae706e232f221659",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09c014ca8cbc77216",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0434633ca0720299c",
            "owner_id": "621257592898",
            "tags": {
              "Name": "mumbai-vpc"
            },
            "tags_all": {
              "Name": "mumbai-vpc"
            }
          }
        }
      ]
    }
  ]
}